# log-density-plugin

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  JavaASTExtract.java  LSTM_Log_Density_Model.py  MyBlock.java  README.md  build.gradle.kts  clustering.R  pyproject.toml  settings.gradle.kts
artifacts/: class.puml  classes - extension.puml  classes - services.puml  classes.puml  components dev.puml  components dev2.puml  components prod.puml  components.puml  ds - POST 8080 create.puml  ds - POST 8081 analyzeProject.puml  ds - POST 8081 predict.puml  ds - ajout de fichiers.puml  ds - analyse de fichiers.puml  ds - analyse tabs ouverts.puml  ds - enlever des fichiers.puml  ds - initialisation extension.puml  ds_cu01.puml  ds_cu02.puml  ds_cu03.puml  test.puml
backend/: Dockerfile  README.md  install_R.sh  main.py  make_requests.py  pyproject.toml  run_model.py
logdensitytool/: CHANGELOG.md  README.md  USERGUIDE.md  analysisPreviewProvider.js  extension.js  logDensityCodeLensProvider.js  openTabsSidebarProvider  openTabsSidebarProvider.js  package-lock.json  package.json  runModelService.js  trainModelService.js
preprocess_project/: MyBlock.java
service/: README.md  (+1 more)
service_model_creation/: Dockerfile  make_requests.py  pyproject.toml  run_model.py
service_model_creation/routers/: model_router.py
service_model_creation/services/: model_service.py
service_model_creation/tests/integration/: training_model_test.py
service_model_creation/tests/unit/: model_router_test.py
service_model_creation/training/: LSTM_Log_Density_Model.py
(+74 files in other folders)
