[tool.poetry]
name = "pfe-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pfe_server"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.1"
keras = "^3.3.3"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
