[tool.poetry]
name = "pfe-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "pfe_server"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.16.1"
keras = "^3.3.3"
gensim = "^4.3.2"
scipy = "1.10.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1" 
pydantic = "^2.7.4" 
gitpython = "^3.1.43"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
